--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -41,3 +41,8 @@ newArchEnabled=false
 hermesEnabled=true
 
 org.gradle.java.home=C:/Program Files/Java/jdk-17
+
+MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
+MYAPP_UPLOAD_STORE_PASSWORD=Pass123
+MYAPP_UPLOAD_KEY_PASSWORD=Pass123
