--- a/ios/HealthEnrollmentApp/Info.plist
+++ b/ios/HealthEnrollmentApp/Info.plist
@@ -48,5 +48,14 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCameraUsageDescription</key>
+<string>$(PRODUCT_NAME) needs access to your camera to take photos.</string>
+<key>NSPhotoLibraryUsageDescription</key>
+<string>$(PRODUCT_NAME) needs access to your photo library to choose photos.</string>
+<key>NSPhotoLibraryAddUsageDescription</key>
+<string>$(PRODUCT_NAME) needs access to your photo library to save photos.</string>
+<key>NSLocationWhenInUseUsageDescription</key>
+<string>This app needs to get your location...</string>
+
 </dict>
 </plist>
