--- a/ios/Podfile
+++ b/ios/Podfile
@@ -6,7 +6,7 @@ require Pod::Executable.execute_command('node', ['-p', <<~'NODE_SCRIPT', __dir__
   )
 NODE_SCRIPT
 
-platform :ios, '11.0'
+platform :ios, min_ios_version_supported
 prepare_react_native_project!
 
 linkage = ENV['USE_FRAMEWORKS']
