--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,28 +1,41 @@
-require_relative '../node_modules/react-native/scripts/react_native_pods'
-require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
+# Resolve react_native_pods.rb with node to allow for hoisting
+require Pod::Executable.execute_command('node', ['-p', <<~'NODE_SCRIPT', __dir__]).strip
+  require.resolve(
+    "react-native/scripts/react_native_pods.rb",
+    {paths: [process.argv[1]]},
+  )
+NODE_SCRIPT
 
-platform :ios, '13.0'
+platform :ios, min_ios_version_supported
+prepare_react_native_project!
+
+linkage = ENV['USE_FRAMEWORKS']
+if linkage != nil
+  Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
+  use_frameworks! :linkage => linkage.to_sym
+end
 
 target 'HealthEnrollmentApp' do
   config = use_native_modules!
+
   use_react_native!(
-    :path => config["reactNativePath"],
-    :hermes_enabled => true
+    :path => config[:reactNativePath],
+    # An absolute path to your application root.
+    :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
   target 'HealthEnrollmentAppTests' do
     inherit! :complete
     # Pods for testing
   end
+end
 
-  use_flipper!()
-
-  post_install do |installer|
-    react_native_post_install(installer)
-    installer.pods_project.targets.each do |target|
-      target.build_configurations.each do |config|
-        # Add any additional configuration here if needed
-      end
-    end
-  end
+post_install do |installer|
+  # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
+  react_native_post_install(
+    installer,
+    config[:reactNativePath],
+    :mac_catalyst_enabled => false,
+    # :ccache_enabled => true
+  )
 end
